ffi/pigpio.h

typedef struct
{
   uint32_t gpioOn;
   uint32_t gpioOff;
   uint32_t usDelay;
} gpioPulse_t;
typedef void (*gpioAlertFunc_t)    (int      gpio,
                                    int      level,
                                    uint32_t tick);
typedef void (*gpioAlertFuncEx_t)  (int      gpio,
                                    int      level,
                                    uint32_t tick,
                                    void    *userdata);
typedef void (*gpioISRFunc_t)      (int      gpio,
                                    int      level,
                                    uint32_t tick);
typedef void (*gpioISRFuncEx_t)    (int      gpio,
                                    int      level,
                                    uint32_t tick,
                                    void    *userdata);
void gpioTerminate(void);
int gpioSetMode(unsigned gpio, unsigned mode);
int gpioGetMode(unsigned gpio);
int gpioSetPullUpDown(unsigned gpio, unsigned pud);
int gpioRead (unsigned gpio);
int gpioWrite(unsigned gpio, unsigned level);
int gpioPWM(unsigned user_gpio, unsigned dutycycle);
int gpioGetPWMdutycycle(unsigned user_gpio);
int gpioSetPWMrange(unsigned user_gpio, unsigned range);
int gpioGetPWMrange(unsigned user_gpio);
int gpioGetPWMrealRange(unsigned user_gpio);
int gpioSetPWMfrequency(unsigned user_gpio, unsigned frequency);
int gpioGetPWMfrequency(unsigned user_gpio);
int gpioServo(unsigned user_gpio, unsigned pulsewidth);
int gpioGetServoPulsewidth(unsigned user_gpio);
int gpioSetAlertFunc(unsigned user_gpio, gpioAlertFunc_t f);
int gpioSetAlertFuncEx(
   unsigned user_gpio, gpioAlertFuncEx_t f, void *userdata);
int gpioSetISRFunc(
   unsigned gpio, unsigned edge, int timeout, gpioISRFunc_t f);
int gpioSetISRFuncEx(
   unsigned gpio,
   unsigned edge,
   int timeout,
   gpioISRFuncEx_t f,
   void *userdata);
int gpioNotifyOpen(void);
int gpioNotifyOpenWithSize(int bufSize);
int gpioNotifyBegin(unsigned handle, uint32_t bits);
int gpioNotifyPause(unsigned handle);
int gpioNotifyClose(unsigned handle);
int gpioWaveClear(void);
int gpioWaveAddNew(void);
int gpioWaveAddGeneric(unsigned numPulses, gpioPulse_t *pulses);
int gpioWaveAddSerial
   (unsigned user_gpio,
    unsigned baud,
    unsigned data_bits,
    unsigned stop_bits,
    unsigned offset,
    unsigned numBytes,
    char     *str);
int gpioWaveCreate(void);
int gpioWaveCreatePad(int pctCB, int pctBOOL, int pctTOOL);
int gpioWaveDelete(unsigned wave_id);
int gpioWaveTxSend(unsigned wave_id, unsigned wave_mode);
int gpioWaveChain(char *buf, unsigned bufSize);
int gpioWaveTxAt(void);
int gpioWaveTxBusy(void);
int gpioWaveTxStop(void);
int gpioWaveGetMicros(void);
int gpioWaveGetHighMicros(void);
int gpioWaveGetMaxMicros(void);
int gpioWaveGetPulses(void);
int gpioWaveGetHighPulses(void);
int gpioWaveGetMaxPulses(void);