lib/src/bindings.dart


  void gpioTerminate() {
    _gpioTerminate ??= _dylib
        .lookupFunction<_c_gpioTerminate, _dart_gpioTerminate>('gpioTerminate');
    return _gpioTerminate();
  }

  _dart_gpioTerminate _gpioTerminate;

  int gpioSetMode(
    int gpio,
    int mode,
  ) {
    _gpioSetMode ??=
        _dylib.lookupFunction<_c_gpioSetMode, _dart_gpioSetMode>('gpioSetMode');
    return _gpioSetMode(
      gpio,
      mode,
    );
  }

  _dart_gpioSetMode _gpioSetMode;

  int gpioGetMode(
    int gpio,
  ) {
    _gpioGetMode ??=
        _dylib.lookupFunction<_c_gpioGetMode, _dart_gpioGetMode>('gpioGetMode');
    return _gpioGetMode(
      gpio,
    );
  }

  _dart_gpioGetMode _gpioGetMode;

  int gpioSetPullUpDown(
    int gpio,
    int pud,
  ) {
    _gpioSetPullUpDown ??=
        _dylib.lookupFunction<_c_gpioSetPullUpDown, _dart_gpioSetPullUpDown>(
            'gpioSetPullUpDown');
    return _gpioSetPullUpDown(
      gpio,
      pud,
    );
  }

  _dart_gpioSetPullUpDown _gpioSetPullUpDown;

  int gpioRead(
    int gpio,
  ) {
    _gpioRead ??=
        _dylib.lookupFunction<_c_gpioRead, _dart_gpioRead>('gpioRead');
    return _gpioRead(
      gpio,
    );
  }

  _dart_gpioRead _gpioRead;

  int gpioWrite(
    int gpio,
    int level,
  ) {
    _gpioWrite ??=
        _dylib.lookupFunction<_c_gpioWrite, _dart_gpioWrite>('gpioWrite');
    return _gpioWrite(
      gpio,
      level,
    );
  }

  _dart_gpioWrite _gpioWrite;

  int gpioPWM(
    int user_gpio,
    int dutycycle,
  ) {
    _gpioPWM ??= _dylib.lookupFunction<_c_gpioPWM, _dart_gpioPWM>('gpioPWM');
    return _gpioPWM(
      user_gpio,
      dutycycle,
    );
  }

  _dart_gpioPWM _gpioPWM;

  int gpioGetPWMdutycycle(
    int user_gpio,
  ) {
    _gpioGetPWMdutycycle ??= _dylib.lookupFunction<_c_gpioGetPWMdutycycle,
        _dart_gpioGetPWMdutycycle>('gpioGetPWMdutycycle');
    return _gpioGetPWMdutycycle(
      user_gpio,
    );
  }

  _dart_gpioGetPWMdutycycle _gpioGetPWMdutycycle;

  int gpioSetPWMrange(
    int user_gpio,
    int range,
  ) {
    _gpioSetPWMrange ??=
        _dylib.lookupFunction<_c_gpioSetPWMrange, _dart_gpioSetPWMrange>(
            'gpioSetPWMrange');
    return _gpioSetPWMrange(
      user_gpio,
      range,
    );
  }

  _dart_gpioSetPWMrange _gpioSetPWMrange;

  int gpioGetPWMrange(
    int user_gpio,
  ) {
    _gpioGetPWMrange ??=
        _dylib.lookupFunction<_c_gpioGetPWMrange, _dart_gpioGetPWMrange>(
            'gpioGetPWMrange');
    return _gpioGetPWMrange(
      user_gpio,
    );
  }

  _dart_gpioGetPWMrange _gpioGetPWMrange;

  int gpioGetPWMrealRange(
    int user_gpio,
  ) {
    _gpioGetPWMrealRange ??= _dylib.lookupFunction<_c_gpioGetPWMrealRange,
        _dart_gpioGetPWMrealRange>('gpioGetPWMrealRange');
    return _gpioGetPWMrealRange(
      user_gpio,
    );
  }

  _dart_gpioGetPWMrealRange _gpioGetPWMrealRange;

  int gpioSetPWMfrequency(
    int user_gpio,
    int frequency,
  ) {
    _gpioSetPWMfrequency ??= _dylib.lookupFunction<_c_gpioSetPWMfrequency,
        _dart_gpioSetPWMfrequency>('gpioSetPWMfrequency');
    return _gpioSetPWMfrequency(
      user_gpio,
      frequency,
    );
  }

  _dart_gpioSetPWMfrequency _gpioSetPWMfrequency;

  int gpioGetPWMfrequency(
    int user_gpio,
  ) {
    _gpioGetPWMfrequency ??= _dylib.lookupFunction<_c_gpioGetPWMfrequency,
        _dart_gpioGetPWMfrequency>('gpioGetPWMfrequency');
    return _gpioGetPWMfrequency(
      user_gpio,
    );
  }

  _dart_gpioGetPWMfrequency _gpioGetPWMfrequency;

  int gpioServo(
    int user_gpio,
    int pulsewidth,
  ) {
    _gpioServo ??=
        _dylib.lookupFunction<_c_gpioServo, _dart_gpioServo>('gpioServo');
    return _gpioServo(
      user_gpio,
      pulsewidth,
    );
  }

  _dart_gpioServo _gpioServo;

  int gpioGetServoPulsewidth(
    int user_gpio,
  ) {
    _gpioGetServoPulsewidth ??= _dylib.lookupFunction<_c_gpioGetServoPulsewidth,
        _dart_gpioGetServoPulsewidth>('gpioGetServoPulsewidth');
    return _gpioGetServoPulsewidth(
      user_gpio,
    );
  }

  _dart_gpioGetServoPulsewidth _gpioGetServoPulsewidth;

  int gpioSetAlertFunc(
    int user_gpio,
    ffi.Pointer<ffi.NativeFunction<gpioAlertFunc_t>> f,
  ) {
    _gpioSetAlertFunc ??=
        _dylib.lookupFunction<_c_gpioSetAlertFunc, _dart_gpioSetAlertFunc>(
            'gpioSetAlertFunc');
    return _gpioSetAlertFunc(
      user_gpio,
      f,
    );
  }

  _dart_gpioSetAlertFunc _gpioSetAlertFunc;

  int gpioSetAlertFuncEx(
    int user_gpio,
    ffi.Pointer<ffi.NativeFunction<gpioAlertFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetAlertFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetAlertFuncEx, _dart_gpioSetAlertFuncEx>(
            'gpioSetAlertFuncEx');
    return _gpioSetAlertFuncEx(
      user_gpio,
      f,
      userdata,
    );
  }

  _dart_gpioSetAlertFuncEx _gpioSetAlertFuncEx;

  int gpioSetISRFunc(
    int gpio,
    int edge,
    int timeout,
    ffi.Pointer<ffi.NativeFunction<gpioISRFunc_t>> f,
  ) {
    _gpioSetISRFunc ??=
        _dylib.lookupFunction<_c_gpioSetISRFunc, _dart_gpioSetISRFunc>(
            'gpioSetISRFunc');
    return _gpioSetISRFunc(
      gpio,
      edge,
      timeout,
      f,
    );
  }

  _dart_gpioSetISRFunc _gpioSetISRFunc;

  int gpioSetISRFuncEx(
    int gpio,
    int edge,
    int timeout,
    ffi.Pointer<ffi.NativeFunction<gpioISRFuncEx_t>> f,
    ffi.Pointer<ffi.Void> userdata,
  ) {
    _gpioSetISRFuncEx ??=
        _dylib.lookupFunction<_c_gpioSetISRFuncEx, _dart_gpioSetISRFuncEx>(
            'gpioSetISRFuncEx');
    return _gpioSetISRFuncEx(
      gpio,
      edge,
      timeout,
      f,
      userdata,
    );
  }

  _dart_gpioSetISRFuncEx _gpioSetISRFuncEx;

  int gpioNotifyOpen() {
    _gpioNotifyOpen ??=
        _dylib.lookupFunction<_c_gpioNotifyOpen, _dart_gpioNotifyOpen>(
            'gpioNotifyOpen');
    return _gpioNotifyOpen();
  }

  _dart_gpioNotifyOpen _gpioNotifyOpen;

  int gpioNotifyOpenWithSize(
    int bufSize,
  ) {
    _gpioNotifyOpenWithSize ??= _dylib.lookupFunction<_c_gpioNotifyOpenWithSize,
        _dart_gpioNotifyOpenWithSize>('gpioNotifyOpenWithSize');
    return _gpioNotifyOpenWithSize(
      bufSize,
    );
  }

  _dart_gpioNotifyOpenWithSize _gpioNotifyOpenWithSize;

  int gpioNotifyBegin(
    int handle,
    int bits,
  ) {
    _gpioNotifyBegin ??=
        _dylib.lookupFunction<_c_gpioNotifyBegin, _dart_gpioNotifyBegin>(
            'gpioNotifyBegin');
    return _gpioNotifyBegin(
      handle,
      bits,
    );
  }

  _dart_gpioNotifyBegin _gpioNotifyBegin;

  int gpioNotifyPause(
    int handle,
  ) {
    _gpioNotifyPause ??=
        _dylib.lookupFunction<_c_gpioNotifyPause, _dart_gpioNotifyPause>(
            'gpioNotifyPause');
    return _gpioNotifyPause(
      handle,
    );
  }

  _dart_gpioNotifyPause _gpioNotifyPause;

  int gpioNotifyClose(
    int handle,
  ) {
    _gpioNotifyClose ??=
        _dylib.lookupFunction<_c_gpioNotifyClose, _dart_gpioNotifyClose>(
            'gpioNotifyClose');
    return _gpioNotifyClose(
      handle,
    );
  }

  _dart_gpioNotifyClose _gpioNotifyClose;

  int gpioWaveClear() {
    _gpioWaveClear ??= _dylib
        .lookupFunction<_c_gpioWaveClear, _dart_gpioWaveClear>('gpioWaveClear');
    return _gpioWaveClear();
  }

  _dart_gpioWaveClear _gpioWaveClear;

  int gpioWaveAddNew() {
    _gpioWaveAddNew ??=
        _dylib.lookupFunction<_c_gpioWaveAddNew, _dart_gpioWaveAddNew>(
            'gpioWaveAddNew');
    return _gpioWaveAddNew();
  }

  _dart_gpioWaveAddNew _gpioWaveAddNew;

  int gpioWaveAddGeneric(
    int numPulses,
    ffi.Pointer<gpioPulse_t> pulses,
  ) {
    _gpioWaveAddGeneric ??=
        _dylib.lookupFunction<_c_gpioWaveAddGeneric, _dart_gpioWaveAddGeneric>(
            'gpioWaveAddGeneric');
    return _gpioWaveAddGeneric(
      numPulses,
      pulses,
    );
  }

  _dart_gpioWaveAddGeneric _gpioWaveAddGeneric;

  int gpioWaveAddSerial(
    int user_gpio,
    int baud,
    int data_bits,
    int stop_bits,
    int offset,
    int numBytes,
    ffi.Pointer<ffi.Int8> str,
  ) {
    _gpioWaveAddSerial ??=
        _dylib.lookupFunction<_c_gpioWaveAddSerial, _dart_gpioWaveAddSerial>(
            'gpioWaveAddSerial');
    return _gpioWaveAddSerial(
      user_gpio,
      baud,
      data_bits,
      stop_bits,
      offset,
      numBytes,
      str,
    );
  }

  _dart_gpioWaveAddSerial _gpioWaveAddSerial;

  int gpioWaveCreate() {
    _gpioWaveCreate ??=
        _dylib.lookupFunction<_c_gpioWaveCreate, _dart_gpioWaveCreate>(
            'gpioWaveCreate');
    return _gpioWaveCreate();
  }

  _dart_gpioWaveCreate _gpioWaveCreate;

  int gpioWaveCreatePad(
    int pctCB,
    int pctBOOL,
    int pctTOOL,
  ) {
    _gpioWaveCreatePad ??=
        _dylib.lookupFunction<_c_gpioWaveCreatePad, _dart_gpioWaveCreatePad>(
            'gpioWaveCreatePad');
    return _gpioWaveCreatePad(
      pctCB,
      pctBOOL,
      pctTOOL,
    );
  }

  _dart_gpioWaveCreatePad _gpioWaveCreatePad;

  int gpioWaveDelete(
    int wave_id,
  ) {
    _gpioWaveDelete ??=
        _dylib.lookupFunction<_c_gpioWaveDelete, _dart_gpioWaveDelete>(
            'gpioWaveDelete');
    return _gpioWaveDelete(
      wave_id,
    );
  }

  _dart_gpioWaveDelete _gpioWaveDelete;

  int gpioWaveTxSend(
    int wave_id,
    int wave_mode,
  ) {
    _gpioWaveTxSend ??=
        _dylib.lookupFunction<_c_gpioWaveTxSend, _dart_gpioWaveTxSend>(
            'gpioWaveTxSend');
    return _gpioWaveTxSend(
      wave_id,
      wave_mode,
    );
  }

  _dart_gpioWaveTxSend _gpioWaveTxSend;

  int gpioWaveChain(
    ffi.Pointer<ffi.Int8> buf,
    int bufSize,
  ) {
    _gpioWaveChain ??= _dylib
        .lookupFunction<_c_gpioWaveChain, _dart_gpioWaveChain>('gpioWaveChain');
    return _gpioWaveChain(
      buf,
      bufSize,
    );
  }

  _dart_gpioWaveChain _gpioWaveChain;

  int gpioWaveTxAt() {
    _gpioWaveTxAt ??= _dylib
        .lookupFunction<_c_gpioWaveTxAt, _dart_gpioWaveTxAt>('gpioWaveTxAt');
    return _gpioWaveTxAt();
  }

  _dart_gpioWaveTxAt _gpioWaveTxAt;

  int gpioWaveTxBusy() {
    _gpioWaveTxBusy ??=
        _dylib.lookupFunction<_c_gpioWaveTxBusy, _dart_gpioWaveTxBusy>(
            'gpioWaveTxBusy');
    return _gpioWaveTxBusy();
  }

  _dart_gpioWaveTxBusy _gpioWaveTxBusy;

  int gpioWaveTxStop() {
    _gpioWaveTxStop ??=
        _dylib.lookupFunction<_c_gpioWaveTxStop, _dart_gpioWaveTxStop>(
            'gpioWaveTxStop');
    return _gpioWaveTxStop();
  }

  _dart_gpioWaveTxStop _gpioWaveTxStop;

  int gpioWaveGetMicros() {
    _gpioWaveGetMicros ??=
        _dylib.lookupFunction<_c_gpioWaveGetMicros, _dart_gpioWaveGetMicros>(
            'gpioWaveGetMicros');
    return _gpioWaveGetMicros();
  }

  _dart_gpioWaveGetMicros _gpioWaveGetMicros;

  int gpioWaveGetHighMicros() {
    _gpioWaveGetHighMicros ??= _dylib.lookupFunction<_c_gpioWaveGetHighMicros,
        _dart_gpioWaveGetHighMicros>('gpioWaveGetHighMicros');
    return _gpioWaveGetHighMicros();
  }

  _dart_gpioWaveGetHighMicros _gpioWaveGetHighMicros;

  int gpioWaveGetMaxMicros() {
    _gpioWaveGetMaxMicros ??= _dylib.lookupFunction<_c_gpioWaveGetMaxMicros,
        _dart_gpioWaveGetMaxMicros>('gpioWaveGetMaxMicros');
    return _gpioWaveGetMaxMicros();
  }

  _dart_gpioWaveGetMaxMicros _gpioWaveGetMaxMicros;

  int gpioWaveGetPulses() {
    _gpioWaveGetPulses ??=
        _dylib.lookupFunction<_c_gpioWaveGetPulses, _dart_gpioWaveGetPulses>(
            'gpioWaveGetPulses');
    return _gpioWaveGetPulses();
  }

  _dart_gpioWaveGetPulses _gpioWaveGetPulses;

  int gpioWaveGetHighPulses() {
    _gpioWaveGetHighPulses ??= _dylib.lookupFunction<_c_gpioWaveGetHighPulses,
        _dart_gpioWaveGetHighPulses>('gpioWaveGetHighPulses');
    return _gpioWaveGetHighPulses();
  }

  _dart_gpioWaveGetHighPulses _gpioWaveGetHighPulses;

  int gpioWaveGetMaxPulses() {
    _gpioWaveGetMaxPulses ??= _dylib.lookupFunction<_c_gpioWaveGetMaxPulses,
        _dart_gpioWaveGetMaxPulses>('gpioWaveGetMaxPulses');
    return _gpioWaveGetMaxPulses();
  }
